overflow fix

--- a/main.css
+++ b/main.css
@@ -76,7 +76,6 @@ body{
 	background-color: #f7f7f7;
 	padding:10px 10px 10px 10px;
 	height: 95%;
-	border: 10px solid black;
 }
 
 h1,h2,h3,h4{
@@ -103,6 +102,7 @@ h3{font-size:1.5em;}
 	text-align:left;
 	width: 95%;
 	padding: 10px;
+	overflow: hidden;
 }
 
 .picturelist li {
